--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
    <hr class="featurette-divider">    
     
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <p>Created by <a href="mailto:r.allen@csulb.edu">Ali Mourad</a> -  <a href="https://github.com/AliMouradd" target="_blank">GitHub Link</a></p><p>Last updated on 5-04-21</p>
+  <p>Created by Ali Mourad</a> -  <a href="https://github.com/AliMouradd" target="_blank">GitHub Link</a></p><p>Last updated on 5-04-21</p>
     <i class="fas fa-chalkboard-teacher" style="font-size:60px;color:gold;text-shadow:2px 2px 4px #000000;"></i>
 </div>
     </div>
